<resources>
    <string name="app_name">Movie Box</string>
    <string name="log">Login</string>
    <string name="register">Ctreat new Account</string>
    <string name="create">Create</string>
    <string name="email">Enter your Email</string>
    <string name="name">Enter your Name</string>
    <string name="pass">Enter your Password</string>
    <string name="repass">Confirm password</string>
    <string name="forget">Forget your password !</string>
    <string name="send">Send </string>
    <string name="reset_password">We will send you a link to reset your password</string>
    <string name="author">Author : </string>
    <string name="content">content ..content.. content </string>
    <string name="NoConnection">No internet connection !</string>
    <string name="videoName">Video Name : </string>
    <string name="link">Link ..Link.. Link</string>
    <string name="messangerMessage">Write Message</string>
    <string name="commentsTitle">Comments : </string>
    <string name="commentsMessage">Write Comment</string>
    <string name="ReviewTitle">Reviews : </string>
    <string name="movieName">SUICIDE SQUAD</string>
    <string name="storyTitle">Story :</string>
    <string name="storyContent">From DC Comics comes the Suicide Squad, an antihero team of incarcerated supervillains who act as deniable assets for the United States government, undertaking high-risk black ops missions in exchange for commuted prison sentences.</string>
    <string name="trailerTitle">Trailers : </string>
</resources>
